--- a/emacs-pass.org
+++ b/emacs-pass.org
@@ -76,6 +76,45 @@ Emacs can then read password information from an encrypted
 machine HOST login NAME password VALUE port NUMBER
 #+END_EXAMPLE
 
+It helps to have a utility to extract account information from
+/authinfo/ that other programs can call.
+
+#+BEGIN_SRC python ~/bin/authinfo-query.py :shebang #!/usr/bin/python
+  # Written by Stephen Fromm <sfromm gmail com>
+  # (C) 2013 University of Oregon
+  #
+  # This program is free software; you can redistribute it and/or modify
+  # it under the terms of the GNU General Public License as published by
+  # the Free Software Foundation; either version 2 of the License, or
+  # (at your option) any later version.
+  #
+  # This program is distributed in the hope that it will be useful, but
+  # WITHOUT ANY WARRANTY; without even the implied warranty of
+  # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  # General Public License for more details.
+  #
+  # You should have received a copy of the GNU General Public License
+  # along with this program; if not, write to the Free Software
+  # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+  # 02110-1301, USA.
+
+  import re, os, sys
+
+  def get_password(login, machine, port):
+      s = "machine %s login %s port %s password \"(.*)\"\n" % (machine, login, port)
+      p = re.compile(s)
+      authinfo = os.popen("gpg -q --use-agent --no-tty -d ~/.authinfo.gpg").read()
+      try:
+          return p.search(authinfo).group(1)
+      except:
+          return ""
+
+  if __name__ == '__main__':
+      if len(sys.argv) == 4:
+          # Expects:  login, hostname, port/service
+          sys.stdout.write(get_password(sys.argv[1], sys.argv[2], sys.argv[3]))
+#+END_SRC
+
 * Password Store
 
 - https://www.passwordstore.org/
