--- a/emacs.org
+++ b/emacs.org
@@ -1122,6 +1122,15 @@ will increase, decrease, and reset the font size.
   (sf/font-update)
 #+END_SRC
 
+#+BEGIN_SRC emacs-lisp
+  (use-package all-the-icons :ensure t)
+
+  (use-package all-the-icons-dired
+    :ensure t
+    :init
+    (add-hook 'dired-mode-hook 'all-the-icons-dired-mode))
+#+END_SRC
+
 **** General appearance items
 
 If using Emacs in server mode, the following function wraps things to do
