--- a/setup-git.org
+++ b/setup-git.org
@@ -1,31 +1,34 @@
-#+TITLE: Emacs / Vim emulation
-#+PROPERTY: header-args :tangle ~/.emacs.d/site-lisp/emacs-vi.el
+#+TITLE: Emacs & Git Integration
+#+PROPERTY: header-args :tangle ~/.emacs.d/site-lisp/setup-git.el
 
-* Emacs vi emulation
+* Magit
 
-While I have been using Emacs again for several years, I still have
-quite a bit of Vim muscle memory.  [[https://gitorious.org/evil/pages/Home][evil]] provides an emulation mode that
-I find extremely useful.
-
-This also sets the initial state of some modes to _emacs_ where it makes
-sense.
+I use [[http://magit.github.io/][magit]], the emacs mode for [[http://git-scm.com/][git]].  It can be used to review diffs,
+commit, push changes, and other things.  Documentation is available in
+_info_ and [[http://magit.github.io/master/magit.html][online]].  This also installs [[https://github.com/pidu/git-timemachine][git-timemachine]], a way of
+navigating a file's history in [[http://git-scm.com/][git]].
 
 #+BEGIN_SRC emacs-lisp
-  (sf/package-install 'evil)
-  (use-package evil
+  (use-package magit
+    :ensure t
     :init
-    (evil-mode 1)
-    :config
     (progn
-      (dolist (mode '(bbdb-mode erc-mode fundamental-mode shell-mode calendar-mode message-mode special-mode ))
+      (setq
+        magit-push-always-verify nil
+        magit-completing-read-function 'ivy-completing-read
+        magit-last-seen-setup-instructions "1.4.0")
+      (dolist (mode '(magit-mode magit-popup-mode magit-diff-mode))
         (evil-set-initial-state mode 'emacs))
-      ))
+      )
+    :commands magit-status
+    :bind ("C-x g" . magit-status))
+  (sf/package-install 'git-timemachine)
 #+END_SRC
 
 Finally, offer module for use.
 
 #+BEGIN_SRC emacs-lisp
-(provide 'emacs-vi)
+(provide 'setup-git)
 #+END_SRC
 
 * License
